--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <div id="barra"></div>
+    <div id="barra1"></div>
+    <div id="barra2"></div>
     
 </body>
 <script src="script.js"></script>
